--- a/frontend-nanodegree-resume-master/css/style.css
+++ b/frontend-nanodegree-resume-master/css/style.css
@@ -1,3 +1,8 @@
+.flex-item{
+  display: flex;   
+  flex-flow:initial;
+}
+
 body,
 div,
 ul,
@@ -61,10 +66,7 @@ h5 {
 
 }
 
-.flex-item{
-  display: flex;   
-    flex-flow:row nowrap;
-}
+
 
 .date-text {
   font-style: italic;
