--- a/frontend-nanodegree-resume-master/css/style.css
+++ b/frontend-nanodegree-resume-master/css/style.css
@@ -1,8 +1,3 @@
-.flex-item{
-  display: flex;   
-  flex-flow:initial;
-}
-
 body,
 div,
 ul,
@@ -149,7 +144,7 @@ a {
 
 .flex-column {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: nowrap;
   padding: 10px;
 }
