--- a/frontend-nanodegree-resume-master/css/style.css
+++ b/frontend-nanodegree-resume-master/css/style.css
@@ -1,9 +1,11 @@
+.eh{
+  width:300px;
+}
 .flex-column {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   padding: 10px;
-  text-align: center;
 }
 
 body,
